fix about boxes on small screens

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -100,6 +100,9 @@ hr {
 
 .about-boxes {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .about-box {
